overlay improvements